# feature-homework_10_1

./: .env.example  README.md  pyproject.toml  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_mascs_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
html_report/: z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_external_api_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_utils_py.html
scr/: decorators.py  external_api.py  generators.py  mascs.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_mascs.py  test_processing.py  test_utils.py  test_widget.py
