[tool.poetry]
name = "homework-10-1"
version = "0.1.0"
description = ""
authors = ["Andrey Kazantsev <nwo2050@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
